--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities[0].keys())\n",
+    "pyeongchang_values = list(.keys())\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
