--- a/index.ipynb
+++ b/index.ipynb
@@ -434,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['PyeongChang', 'South Korea', 2581000, 3194]"
+       "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,8 @@
    "source": [
     "pyeongchang_values = list(cities[11].values())\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n"
+    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
+    "type(pyeongchang_values) # list"
    ]
   },
   {
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +473,7 @@
        "list"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
